ping-pong/manifests/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: applications
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: postgresapp
