ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: applications
spec:
  selector:
    app: ping-pong
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3000
