ping-pong/manifests/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: applications
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: postgresapp

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
  namespace: applications
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
      - name: ping-pong-db
        image: kontrakti/ping-pong-db:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: pg-port
          containerPort: 5432
        volumeMounts:
        - name: postgres-data-storage
          mountPath: /var/lib/postgresql/data
        resources:
          limits:
            cpu: "2"
            memory: 1024Mi
          requests:
            cpu: "1"
            memory: 256Mi
  volumeClaimTemplates:
  - metadata:
      name: postgres-data-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-path
      resources:
        requests:
          storage: 1Gi
